--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,8 @@
 Group 2 COP4331 Spring
 
 James Ko Project Manager / Front End
+Tony Pavone Front End
+Kyle Franklin API
+Pranav Nair API
+David Satamaria API
+Ethan Adkins Database
